@@ -106,7 +106,7 @@ dnl *** Check for standard header files ***
 dnl ***************************************
 AC_HEADER_STDC()
 AC_CHECK_HEADERS([assert.h errno.h fcntl.h fnmatch.h fstab.h libintl.h \
-                  locale.h math.h md5.h md5global.h mmintrin.h mntent.h \
+                  locale.h math.h mmintrin.h mntent.h \
                   paths.h regex.h signal.h stdarg.h string.h sys/mman.h \
                   sys/mnttab.h sys/mount.h sys/param.h sys/resource.h \
                   sys/statvfs.h sys/stat.h sys/time.h sys/types.h sys/ucred.h \
@@ -117,12 +117,6 @@ dnl *** Check for standard functions ***
 dnl ************************************
 AC_FUNC_MMAP()
 AC_CHECK_FUNCS([getfsstat getmntent getvfsstat regexec setfsent setmntent])
-
-dnl ******************************************
-dnl *** Check for Message Digest functions ***
-dnl ******************************************
-AC_SEARCH_LIBS([MD5Init], [md md5 c], \
-               [AC_DEFINE([HAVE_MD5INIT], [1], [Define if MD5Init present])])
 
 dnl ***************************************
 dnl *** Check for strftime() extensions ***
