@@ -1,3 +1,7 @@
+2008-11-10	Jannis Pohlmann <jannis@xfce.org>
+
+	* configure.in.in, exo/exo-md5.c: Get rid of external MD5 functions.
+
 2008-11-06	Brian Tarricone <bjt23@cornell.edu>
 
 	* exo-helper/main.c: Fix compile against glib < 2.14.
